# strecke

./: .gitignore  Cargo.toml  README.md  settings.toml
examples/: self_play.rs
examples/web/: lobby.rs  main.rs  settings.rs  webapp.rs
src/: agent.rs  api.rs  board.rs  game.rs  lib.rs  lobby.rs  main.rs  manager.rs  settings.rs  tiles.rs  webapp.rs
static/: board.css  board.js  game.html  index.css  index.html  index.js  lobby.css  lobby.html  lobby.js  tiles.css  tiles.js
