[package]
name = "strecke"
version = "0.1.0"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
config = "0.13"
futures = "0.3"
jsonwebtoken = "8"
lazy_static = "1"
log = "0.4"
pretty_env_logger = "0.4"
rand = "0.8"
rusqlite = "0.29"
rust-argon2 = "1"
serde = { version = "1", features = ["derive"] }
serde_bytes = "0.11"
serde_json = "1"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
