[package]
name = "strecke"
version = "0.2.10"
authors = ["CJ Carey <perimosocordiae@gmail.com>"]
edition = "2024"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
blau_api = { git = "https://github.com/perimosocordiae/blau_api" }
log = "0.4"
rand = "0.9"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[dev-dependencies]
clap = { version = "4", features = ["derive"] }
chrono = "0.4"
config = "0.13"
futures = "0.3"
jsonwebtoken = "8"
lazy_static = "1"
pretty_env_logger = "0.4"
rusqlite = "0.37"
rust-argon2 = "1"
serde_bytes = "0.11"
tokio = { version = "1", features = ["full"] }
tokio-stream = "0.1"
warp = "0.3"
